Test/Files/Parser/FullParserTestCases/Bad/FullTests/testcase04_04.java
class
Main
				{
public
static
	void
main(
String
	[]
	args
	){ 
Solver s = new Solver()
s
}} 

class Solver extends Object { 
int i;
public boolean init(){i = 0;return true;}
public int getI(){return i;}
public Solver solve(){return new Solver();}
} 
